rec_solver/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> translation_unit
Rule 1     translation_unit -> external_declaration
Rule 2     translation_unit -> translation_unit external_declaration
Rule 3     external_declaration -> function_definition
Rule 4     external_declaration -> declaration
Rule 5     function_definition -> declaration_specifiers declarator declaration_list compound_statement
Rule 6     function_definition -> declarator declaration_list compound_statement
Rule 7     function_definition -> declarator compound_statement
Rule 8     function_definition -> declaration_specifiers declarator compound_statement
Rule 9     declaration -> declaration_specifiers init_declarator_list SEMI
Rule 10    declaration -> declaration_specifiers SEMI
Rule 11    declaration_list -> declaration
Rule 12    declaration_list -> declaration_list declaration
Rule 13    declaration_specifiers -> storage_class_specifier declaration_specifiers
Rule 14    declaration_specifiers -> type_specifier declaration_specifiers
Rule 15    declaration_specifiers -> type_qualifier declaration_specifiers
Rule 16    declaration_specifiers -> storage_class_specifier
Rule 17    declaration_specifiers -> type_specifier
Rule 18    declaration_specifiers -> type_qualifier
Rule 19    storage_class_specifier -> AUTO
Rule 20    storage_class_specifier -> REGISTER
Rule 21    storage_class_specifier -> STATIC
Rule 22    storage_class_specifier -> EXTERN
Rule 23    storage_class_specifier -> TYPEDEF
Rule 24    type_specifier -> VOID
Rule 25    type_specifier -> CHAR
Rule 26    type_specifier -> SHORT
Rule 27    type_specifier -> INT
Rule 28    type_specifier -> LONG
Rule 29    type_specifier -> FLOAT
Rule 30    type_specifier -> DOUBLE
Rule 31    type_specifier -> SIGNED
Rule 32    type_specifier -> UNSIGNED
Rule 33    type_specifier -> struct_or_union_specifier
Rule 34    type_specifier -> enum_specifier
Rule 35    type_specifier -> TYPEID
Rule 36    type_specifier -> BOOL
Rule 37    type_qualifier -> CONST
Rule 38    type_qualifier -> VOLATILE
Rule 39    struct_or_union_specifier -> struct_or_union ID LBRACE struct_declaration_list RBRACE
Rule 40    struct_or_union_specifier -> struct_or_union LBRACE struct_declaration_list RBRACE
Rule 41    struct_or_union_specifier -> struct_or_union ID
Rule 42    struct_or_union -> STRUCT
Rule 43    struct_or_union -> UNION
Rule 44    struct_declaration_list -> struct_declaration
Rule 45    struct_declaration_list -> struct_declaration_list struct_declaration
Rule 46    init_declarator_list -> init_declarator
Rule 47    init_declarator_list -> init_declarator_list COMMA init_declarator
Rule 48    init_declarator -> declarator
Rule 49    init_declarator -> declarator EQUALS initializer
Rule 50    struct_declaration -> specifier_qualifier_list struct_declarator_list SEMI
Rule 51    specifier_qualifier_list -> type_specifier specifier_qualifier_list
Rule 52    specifier_qualifier_list -> type_specifier
Rule 53    specifier_qualifier_list -> type_qualifier specifier_qualifier_list
Rule 54    specifier_qualifier_list -> type_qualifier
Rule 55    struct_declarator_list -> struct_declarator
Rule 56    struct_declarator_list -> struct_declarator_list COMMA struct_declarator
Rule 57    struct_declarator -> declarator
Rule 58    struct_declarator -> declarator COLON constant_expression
Rule 59    struct_declarator -> COLON constant_expression
Rule 60    enum_specifier -> ENUM ID LBRACE enumerator_list RBRACE
Rule 61    enum_specifier -> ENUM LBRACE enumerator_list RBRACE
Rule 62    enum_specifier -> ENUM ID
Rule 63    enumerator_list -> enumerator
Rule 64    enumerator_list -> enumerator_list COMMA enumerator
Rule 65    enumerator -> ID
Rule 66    enumerator -> ID EQUALS constant_expression
Rule 67    declarator -> pointer direct_declarator
Rule 68    declarator -> direct_declarator
Rule 69    direct_declarator -> ID
Rule 70    direct_declarator -> LPAREN declarator RPAREN
Rule 71    direct_declarator -> direct_declarator LBRACKET constant_expression_opt RBRACKET
Rule 72    direct_declarator -> direct_declarator LPAREN parameter_type_list RPAREN attributes
Rule 73    direct_declarator -> direct_declarator LPAREN identifier_list RPAREN
Rule 74    direct_declarator -> direct_declarator LPAREN RPAREN
Rule 75    attributes -> attribute attributes
Rule 76    attributes -> <empty>
Rule 77    attribute -> ID attribute_list
Rule 78    attribute_list -> LPAREN attribute_list RPAREN
Rule 79    attribute_list -> identifier_list
Rule 80    pointer -> TIMES type_qualifier_list
Rule 81    pointer -> TIMES
Rule 82    pointer -> TIMES type_qualifier_list pointer
Rule 83    pointer -> TIMES pointer
Rule 84    type_qualifier_list -> type_qualifier
Rule 85    type_qualifier_list -> type_qualifier_list type_qualifier
Rule 86    parameter_type_list -> parameter_list
Rule 87    parameter_type_list -> parameter_list COMMA ELLIPSIS
Rule 88    parameter_list -> parameter_declaration
Rule 89    parameter_list -> parameter_list COMMA parameter_declaration
Rule 90    parameter_declaration -> declaration_specifiers declarator
Rule 91    parameter_declaration -> declaration_specifiers abstract_declarator_opt
Rule 92    identifier_list -> ID
Rule 93    identifier_list -> identifier_list COMMA ID
Rule 94    initializer -> assignment_expression
Rule 95    initializer -> LBRACE initializer_list RBRACE
Rule 96    initializer -> LBRACE initializer_list COMMA RBRACE
Rule 97    initializer_list -> initializer
Rule 98    initializer_list -> initializer_list COMMA initializer
Rule 99    type_name -> specifier_qualifier_list abstract_declarator_opt
Rule 100   abstract_declarator_opt -> empty
Rule 101   abstract_declarator_opt -> abstract_declarator
Rule 102   abstract_declarator -> pointer
Rule 103   abstract_declarator -> pointer direct_abstract_declarator
Rule 104   abstract_declarator -> direct_abstract_declarator
Rule 105   direct_abstract_declarator -> LPAREN abstract_declarator RPAREN
Rule 106   direct_abstract_declarator -> direct_abstract_declarator LBRACKET constant_expression_opt RBRACKET
Rule 107   direct_abstract_declarator -> LBRACKET constant_expression_opt RBRACKET
Rule 108   direct_abstract_declarator -> direct_abstract_declarator LPAREN parameter_type_list_opt RPAREN
Rule 109   direct_abstract_declarator -> LPAREN parameter_type_list_opt RPAREN
Rule 110   constant_expression_opt -> empty
Rule 111   constant_expression_opt -> constant_expression
Rule 112   parameter_type_list_opt -> empty
Rule 113   parameter_type_list_opt -> parameter_type_list
Rule 114   statement -> labeled_statement
Rule 115   statement -> expression_statement
Rule 116   statement -> compound_statement
Rule 117   statement -> selection_statement
Rule 118   statement -> iteration_statement
Rule 119   statement -> jump_statement
Rule 120   labeled_statement -> ID COLON statement
Rule 121   labeled_statement -> CASE constant_expression COLON statement
Rule 122   labeled_statement -> DEFAULT COLON statement
Rule 123   expression_statement -> expression_opt SEMI
Rule 124   compound_statement -> LBRACE declaration_list statement_list RBRACE
Rule 125   compound_statement -> LBRACE statement_list RBRACE
Rule 126   compound_statement -> LBRACE declaration_list RBRACE
Rule 127   compound_statement -> LBRACE RBRACE
Rule 128   statement_list -> statement
Rule 129   statement_list -> statement_list statement
Rule 130   selection_statement -> IF LPAREN expression RPAREN statement
Rule 131   selection_statement -> IF LPAREN expression RPAREN statement ELSE statement
Rule 132   selection_statement -> SWITCH LPAREN expression RPAREN statement
Rule 133   iteration_statement -> WHILE LPAREN expression RPAREN statement
Rule 134   iteration_statement -> FOR LPAREN expression_opt SEMI expression_opt SEMI expression_opt RPAREN statement
Rule 135   iteration_statement -> DO statement WHILE LPAREN expression RPAREN SEMI
Rule 136   jump_statement -> GOTO ID SEMI
Rule 137   jump_statement -> CONTINUE SEMI
Rule 138   jump_statement -> BREAK SEMI
Rule 139   jump_statement -> RETURN expression_opt SEMI
Rule 140   expression_opt -> empty
Rule 141   expression_opt -> expression
Rule 142   expression -> assignment_expression
Rule 143   expression -> expression COMMA assignment_expression
Rule 144   assignment_expression -> conditional_expression
Rule 145   assignment_expression -> unary_expression assignment_operator assignment_expression
Rule 146   assignment_operator -> EQUALS
Rule 147   assignment_operator -> TIMESEQUAL
Rule 148   assignment_operator -> DIVEQUAL
Rule 149   assignment_operator -> MODEQUAL
Rule 150   assignment_operator -> PLUSEQUAL
Rule 151   assignment_operator -> MINUSEQUAL
Rule 152   assignment_operator -> LSHIFTEQUAL
Rule 153   assignment_operator -> RSHIFTEQUAL
Rule 154   assignment_operator -> ANDEQUAL
Rule 155   assignment_operator -> OREQUAL
Rule 156   assignment_operator -> XOREQUAL
Rule 157   conditional_expression -> logical_or_expression
Rule 158   conditional_expression -> logical_or_expression CONDOP expression COLON conditional_expression
Rule 159   constant_expression -> conditional_expression
Rule 160   logical_or_expression -> logical_and_expression
Rule 161   logical_or_expression -> logical_or_expression LOR logical_and_expression
Rule 162   logical_and_expression -> inclusive_or_expression
Rule 163   logical_and_expression -> logical_and_expression LAND inclusive_or_expression
Rule 164   inclusive_or_expression -> exclusive_or_expression
Rule 165   inclusive_or_expression -> inclusive_or_expression OR exclusive_or_expression
Rule 166   exclusive_or_expression -> and_expression
Rule 167   exclusive_or_expression -> exclusive_or_expression XOR and_expression
Rule 168   and_expression -> equality_expression
Rule 169   and_expression -> and_expression AND equality_expression
Rule 170   equality_expression -> relational_expression
Rule 171   equality_expression -> equality_expression EQ relational_expression
Rule 172   equality_expression -> equality_expression NE relational_expression
Rule 173   relational_expression -> shift_expression
Rule 174   relational_expression -> relational_expression LT shift_expression
Rule 175   relational_expression -> relational_expression GT shift_expression
Rule 176   relational_expression -> relational_expression LE shift_expression
Rule 177   relational_expression -> relational_expression GE shift_expression
Rule 178   shift_expression -> additive_expression
Rule 179   shift_expression -> shift_expression LSHIFT additive_expression
Rule 180   shift_expression -> shift_expression RSHIFT additive_expression
Rule 181   additive_expression -> multiplicative_expression
Rule 182   additive_expression -> additive_expression PLUS multiplicative_expression
Rule 183   additive_expression -> additive_expression MINUS multiplicative_expression
Rule 184   multiplicative_expression -> cast_expression
Rule 185   multiplicative_expression -> multiplicative_expression TIMES cast_expression
Rule 186   multiplicative_expression -> multiplicative_expression DIVIDE cast_expression
Rule 187   multiplicative_expression -> multiplicative_expression MOD cast_expression
Rule 188   cast_expression -> unary_expression
Rule 189   cast_expression -> LPAREN type_name RPAREN cast_expression
Rule 190   unary_expression -> postfix_expression
Rule 191   unary_expression -> PLUSPLUS unary_expression
Rule 192   unary_expression -> MINUSMINUS unary_expression
Rule 193   unary_expression -> unary_operator cast_expression
Rule 194   unary_expression -> SIZEOF unary_expression
Rule 195   unary_expression -> SIZEOF LPAREN type_name RPAREN
Rule 196   unary_operator -> AND
Rule 197   unary_operator -> TIMES
Rule 198   unary_operator -> PLUS
Rule 199   unary_operator -> MINUS
Rule 200   unary_operator -> NOT
Rule 201   unary_operator -> LNOT
Rule 202   postfix_expression -> primary_expression
Rule 203   postfix_expression -> postfix_expression LBRACKET expression RBRACKET
Rule 204   postfix_expression -> postfix_expression LPAREN argument_expression_list RPAREN
Rule 205   postfix_expression -> postfix_expression LPAREN RPAREN
Rule 206   postfix_expression -> postfix_expression PERIOD ID
Rule 207   postfix_expression -> postfix_expression ARROW ID
Rule 208   postfix_expression -> postfix_expression PLUSPLUS
Rule 209   postfix_expression -> postfix_expression MINUSMINUS
Rule 210   primary_expression -> ID
Rule 211   primary_expression -> constant
Rule 212   primary_expression -> SCONST
Rule 213   primary_expression -> LPAREN expression RPAREN
Rule 214   argument_expression_list -> assignment_expression
Rule 215   argument_expression_list -> argument_expression_list COMMA assignment_expression
Rule 216   constant -> ICONST
Rule 217   constant -> FCONST
Rule 218   constant -> CCONST
Rule 219   empty -> <empty>

Terminals, with rules where they appear

AND                  : 169 196
ANDEQUAL             : 154
ARROW                : 207
AUTO                 : 19
BOOL                 : 36
BREAK                : 138
CASE                 : 121
CCONST               : 218
CHAR                 : 25
COLON                : 58 59 120 121 122 158
COMMA                : 47 56 64 87 89 93 96 98 143 215
CONDOP               : 158
CONST                : 37
CONTINUE             : 137
DEFAULT              : 122
DIVEQUAL             : 148
DIVIDE               : 186
DO                   : 135
DOUBLE               : 30
ELLIPSIS             : 87
ELSE                 : 131
ENUM                 : 60 61 62
EQ                   : 171
EQUALS               : 49 66 146
EXTERN               : 22
FCONST               : 217
FLOAT                : 29
FOR                  : 134
GE                   : 177
GOTO                 : 136
GT                   : 175
ICONST               : 216
ID                   : 39 41 60 62 65 66 69 77 92 93 120 136 206 207 210
IF                   : 130 131
INT                  : 27
LAND                 : 163
LBRACE               : 39 40 60 61 95 96 124 125 126 127
LBRACKET             : 71 106 107 203
LE                   : 176
LNOT                 : 201
LONG                 : 28
LOR                  : 161
LPAREN               : 70 72 73 74 78 105 108 109 130 131 132 133 134 135 189 195 204 205 213
LSHIFT               : 179
LSHIFTEQUAL          : 152
LT                   : 174
MINUS                : 183 199
MINUSEQUAL           : 151
MINUSMINUS           : 192 209
MOD                  : 187
MODEQUAL             : 149
NE                   : 172
NOT                  : 200
OR                   : 165
OREQUAL              : 155
PERIOD               : 206
PLUS                 : 182 198
PLUSEQUAL            : 150
PLUSPLUS             : 191 208
RBRACE               : 39 40 60 61 95 96 124 125 126 127
RBRACKET             : 71 106 107 203
REGISTER             : 20
RETURN               : 139
RPAREN               : 70 72 73 74 78 105 108 109 130 131 132 133 134 135 189 195 204 205 213
RSHIFT               : 180
RSHIFTEQUAL          : 153
SCONST               : 212
SEMI                 : 9 10 50 123 134 134 135 136 137 138 139
SHORT                : 26
SIGNED               : 31
SIZEOF               : 194 195
STATIC               : 21
STRUCT               : 42
SWITCH               : 132
TIMES                : 80 81 82 83 185 197
TIMESEQUAL           : 147
TYPEDEF              : 23
TYPEID               : 35
UNION                : 43
UNSIGNED             : 32
VOID                 : 24
VOLATILE             : 38
WHILE                : 133 135
XOR                  : 167
XOREQUAL             : 156
error                : 

Nonterminals, with rules where they appear

abstract_declarator  : 101 105
abstract_declarator_opt : 91 99
additive_expression  : 178 179 180 182 183
and_expression       : 166 167 169
argument_expression_list : 204 215
assignment_expression : 94 142 143 145 214 215
assignment_operator  : 145
attribute            : 75
attribute_list       : 77 78
attributes           : 72 75
cast_expression      : 184 185 186 187 189 193
compound_statement   : 5 6 7 8 116
conditional_expression : 144 158 159
constant             : 211
constant_expression  : 58 59 66 111 121
constant_expression_opt : 71 106 107
declaration          : 4 11 12
declaration_list     : 5 6 12 124 126
declaration_specifiers : 5 8 9 10 13 14 15 90 91
declarator           : 5 6 7 8 48 49 57 58 70 90
direct_abstract_declarator : 103 104 106 108
direct_declarator    : 67 68 71 72 73 74
empty                : 100 110 112 140
enum_specifier       : 34
enumerator           : 63 64
enumerator_list      : 60 61 64
equality_expression  : 168 169 171 172
exclusive_or_expression : 164 165 167
expression           : 130 131 132 133 135 141 143 158 203 213
expression_opt       : 123 134 134 134 139
expression_statement : 115
external_declaration : 1 2
function_definition  : 3
identifier_list      : 73 79 93
inclusive_or_expression : 162 163 165
init_declarator      : 46 47
init_declarator_list : 9 47
initializer          : 49 97 98
initializer_list     : 95 96 98
iteration_statement  : 118
jump_statement       : 119
labeled_statement    : 114
logical_and_expression : 160 161 163
logical_or_expression : 157 158 161
multiplicative_expression : 181 182 183 185 186 187
parameter_declaration : 88 89
parameter_list       : 86 87 89
parameter_type_list  : 72 113
parameter_type_list_opt : 108 109
pointer              : 67 82 83 102 103
postfix_expression   : 190 203 204 205 206 207 208 209
primary_expression   : 202
relational_expression : 170 171 172 174 175 176 177
selection_statement  : 117
shift_expression     : 173 174 175 176 177 179 180
specifier_qualifier_list : 50 51 53 99
statement            : 120 121 122 128 129 130 131 131 132 133 134 135
statement_list       : 124 125 129
storage_class_specifier : 13 16
struct_declaration   : 44 45
struct_declaration_list : 39 40 45
struct_declarator    : 55 56
struct_declarator_list : 50 56
struct_or_union      : 39 40 41
struct_or_union_specifier : 33
translation_unit     : 2 0
type_name            : 189 195
type_qualifier       : 15 18 53 54 84 85
type_qualifier_list  : 80 82 85
type_specifier       : 14 17 51 52
unary_expression     : 145 188 191 192 194
unary_operator       : 193

Parsing method: LALR

state 0

    (0) S' -> . translation_unit
    (1) translation_unit -> . external_declaration
    (2) translation_unit -> . translation_unit external_declaration
    (3) external_declaration -> . function_definition
    (4) external_declaration -> . declaration
    (5) function_definition -> . declaration_specifiers declarator declaration_list compound_statement
    (6) function_definition -> . declarator declaration_list compound_statement
    (7) function_definition -> . declarator compound_statement
    (8) function_definition -> . declaration_specifiers declarator compound_statement
    (9) declaration -> . declaration_specifiers init_declarator_list SEMI
    (10) declaration -> . declaration_specifiers SEMI
    (13) declaration_specifiers -> . storage_class_specifier declaration_specifiers
    (14) declaration_specifiers -> . type_specifier declaration_specifiers
    (15) declaration_specifiers -> . type_qualifier declaration_specifiers
    (16) declaration_specifiers -> . storage_class_specifier
    (17) declaration_specifiers -> . type_specifier
    (18) declaration_specifiers -> . type_qualifier
    (67) declarator -> . pointer direct_declarator
    (68) declarator -> . direct_declarator
    (19) storage_class_specifier -> . AUTO
    (20) storage_class_specifier -> . REGISTER
    (21) storage_class_specifier -> . STATIC
    (22) storage_class_specifier -> . EXTERN
    (23) storage_class_specifier -> . TYPEDEF
    (24) type_specifier -> . VOID
    (25) type_specifier -> . CHAR
    (26) type_specifier -> . SHORT
    (27) type_specifier -> . INT
    (28) type_specifier -> . LONG
    (29) type_specifier -> . FLOAT
    (30) type_specifier -> . DOUBLE
    (31) type_specifier -> . SIGNED
    (32) type_specifier -> . UNSIGNED
    (33) type_specifier -> . struct_or_union_specifier
    (34) type_specifier -> . enum_specifier
    (35) type_specifier -> . TYPEID
    (36) type_specifier -> . BOOL
    (37) type_qualifier -> . CONST
    (38) type_qualifier -> . VOLATILE
    (80) pointer -> . TIMES type_qualifier_list
    (81) pointer -> . TIMES
    (82) pointer -> . TIMES type_qualifier_list pointer
    (83) pointer -> . TIMES pointer
    (69) direct_declarator -> . ID
    (70) direct_declarator -> . LPAREN declarator RPAREN
    (71) direct_declarator -> . direct_declarator LBRACKET constant_expression_opt RBRACKET
    (72) direct_declarator -> . direct_declarator LPAREN parameter_type_list RPAREN attributes
    (73) direct_declarator -> . direct_declarator LPAREN identifier_list RPAREN
    (74) direct_declarator -> . direct_declarator LPAREN RPAREN
    (39) struct_or_union_specifier -> . struct_or_union ID LBRACE struct_declaration_list RBRACE
    (40) struct_or_union_specifier -> . struct_or_union LBRACE struct_declaration_list RBRACE
    (41) struct_or_union_specifier -> . struct_or_union ID
    (60) enum_specifier -> . ENUM ID LBRACE enumerator_list RBRACE
    (61) enum_specifier -> . ENUM LBRACE enumerator_list RBRACE
    (62) enum_specifier -> . ENUM ID
    (42) struct_or_union -> . STRUCT
    (43) struct_or_union -> . UNION

    AUTO            shift and go to state 12
    REGISTER        shift and go to state 13
    STATIC          shift and go to state 14
    EXTERN          shift and go to state 15
    TYPEDEF         shift and go to state 16
    VOID            shift and go to state 17
    CHAR            shift and go to state 18
    SHORT           shift and go to state 19
    INT             shift and go to state 20
    LONG            shift and go to state 21
    FLOAT           shift and go to state 22
    DOUBLE          shift and go to state 23
    SIGNED          shift and go to state 24
    UNSIGNED        shift and go to state 25
    TYPEID          shift and go to state 28
    BOOL            shift and go to state 29
    CONST           shift and go to state 30
    VOLATILE        shift and go to state 31
    TIMES           shift and go to state 32
    ID              shift and go to state 33
    LPAREN          shift and go to state 34
    ENUM            shift and go to state 36
    STRUCT          shift and go to state 37
    UNION           shift and go to state 38

    translation_unit               shift and go to state 1
    external_declaration           shift and go to state 2
    function_definition            shift and go to state 3
    declaration                    shift and go to state 4
    declaration_specifiers         shift and go to state 5
    declarator                     shift and go to state 6
    storage_class_specifier        shift and go to state 7
    type_specifier                 shift and go to state 8
    type_qualifier                 shift and go to state 9
    pointer                        shift and go to state 10
    direct_declarator              shift and go to state 11
    struct_or_union_specifier      shift and go to state 26
    enum_specifier                 shift and go to state 27
    struct_or_union                shift and go to state 35

state 1

    (0) S' -> translation_unit .
    (2) translation_unit -> translation_unit . external_declaration
    (3) external_declaration -> . function_definition
    (4) external_declaration -> . declaration
    (5) function_definition -> . declaration_specifiers declarator declaration_list compound_statement
    (6) function_definition -> . declarator declaration_list compound_statement
    (7) function_definition -> . declarator compound_statement
    (8) function_definition -> . declaration_specifiers declarator compound_statement
    (9) declaration -> . declaration_specifiers init_declarator_list SEMI
    (10) declaration -> . declaration_specifiers SEMI
    (13) declaration_specifiers -> . storage_class_specifier declaration_specifiers
    (14) declaration_specifiers -> . type_specifier declaration_specifiers
    (15) declaration_specifiers -> . type_qualifier declaration_specifiers
    (16) declaration_specifiers -> . storage_class_specifier
    (17) declaration_specifiers -> . type_specifier
    (18) declaration_specifiers -> . type_qualifier
    (67) declarator -> . pointer direct_declarator
    (68) declarator -> . direct_declarator
    (19) storage_class_specifier -> . AUTO
    (20) storage_class_specifier -> . REGISTER
    (21) storage_class_specifier -> . STATIC
    (22) storage_class_specifier -> . EXTERN
    (23) storage_class_specifier -> . TYPEDEF
    (24) type_specifier -> . VOID
    (25) type_specifier -> . CHAR
    (26) type_specifier -> . SHORT
    (27) type_specifier -> . INT
    (28) type_specifier -> . LONG
    (29) type_specifier -> . FLOAT
    (30) type_specifier -> . DOUBLE
    (31) type_specifier -> . SIGNED
    (32) type_specifier -> . UNSIGNED
    (33) type_specifier -> . struct_or_union_specifier
    (34) type_specifier -> . enum_specifier
    (35) type_specifier -> . TYPEID
    (36) type_specifier -> . BOOL
    (37) type_qualifier -> . CONST
    (38) type_qualifier -> . VOLATILE
    (80) pointer -> . TIMES type_qualifier_list
    (81) pointer -> . TIMES
    (82) pointer -> . TIMES type_qualifier_list pointer
    (83) pointer -> . TIMES pointer
    (69) direct_declarator -> . ID
    (70) direct_declarator -> . LPAREN declarator RPAREN
    (71) direct_declarator -> . direct_declarator LBRACKET constant_expression_opt RBRACKET
    (72) direct_declarator -> . direct_declarator LPAREN parameter_type_list RPAREN attributes
    (73) direct_declarator -> . direct_declarator LPAREN identifier_list RPAREN
    (74) direct_declarator -> . direct_declarator LPAREN RPAREN
    (39) struct_or_union_specifier -> . struct_or_union ID LBRACE struct_declaration_list RBRACE
    (40) struct_or_union_specifier -> . struct_or_union LBRACE struct_declaration_list RBRACE
    (41) struct_or_union_specifier -> . struct_or_union ID
    (60) enum_specifier -> . ENUM ID LBRACE enumerator_list RBRACE
    (61) enum_specifier -> . ENUM LBRACE enumerator_list RBRACE
    (62) enum_specifier -> . ENUM ID
    (42) struct_or_union -> . STRUCT
    (43) struct_or_union -> . UNION

    AUTO            shift and go to state 12
    REGISTER        shift and go to state 13
    STATIC          shift and go to state 14
    EXTERN          shift and go to state 15
    TYPEDEF         shift and go to state 16
    VOID            shift and go to state 17
    CHAR            shift and go to state 18
    SHORT           shift and go to state 19
    INT             shift and go to state 20
    LONG            shift and go to state 21
    FLOAT           shift and go to state 22
    DOUBLE          shift and go to state 23
    SIGNED          shift and go to state 24
    UNSIGNED        shift and go to state 25
    TYPEID          shift and go to state 28
    BOOL            shift and go to state 29
    CONST           shift and go to state 30
    VOLATILE        shift and go to state 31
    TIMES           shift and go to state 32
    ID              shift and go to state 33
    LPAREN          shift and go to state 34
    ENUM            shift and go to state 36
    STRUCT          shift and go to state 37
    UNION           shift and go to state 38

    external_declaration           shift and go to state 39
    function_definition            shift and go to state 3
    declaration                    shift and go to state 4
    declaration_specifiers         shift and go to state 5
    declarator                     shift and go to state 6
    storage_class_specifier        shift and go to state 7
    type_specifier                 shift and go to state 8
    type_qualifier                 shift and go to state 9
    pointer                        shift and go to state 10
    direct_declarator              shift and go to state 11
    struct_or_union_specifier      shift and go to state 26
    enum_specifier                 shift and go to state 27
    struct_or_union                shift and go to state 35

state 2

    (1) translation_unit -> external_declaration .

    AUTO            reduce using rule 1 (translation_unit -> external_declaration .)
    REGISTER        reduce using rule 1 (translation_unit -> external_declaration .)
    STATIC          reduce using rule 1 (translation_unit -> external_declaration .)
    EXTERN          reduce using rule 1 (translation_unit -> external_declaration .)
    TYPEDEF         reduce using rule 1 (translation_unit -> external_declaration .)
    VOID            reduce using rule 1 (translation_unit -> external_declaration .)
    CHAR            reduce using rule 1 (translation_unit -> external_declaration .)
    SHORT           reduce using rule 1 (translation_unit -> external_declaration .)
    INT             reduce using rule 1 (translation_unit -> external_declaration .)
    LONG            reduce using rule 1 (translation_unit -> external_declaration .)
    FLOAT           reduce using rule 1 (translation_unit -> external_declaration .)
    DOUBLE          reduce using rule 1 (translation_unit -> external_declaration .)
    SIGNED          reduce using rule 1 (translation_unit -> external_declaration .)
    UNSIGNED        reduce using rule 1 (translation_unit -> external_declaration .)
    TYPEID          reduce using rule 1 (translation_unit -> external_declaration .)
    BOOL            reduce using rule 1 (translation_unit -> external_declaration .)
    CONST           reduce using rule 1 (translation_unit -> external_declaration .)
    VOLATILE        reduce using rule 1 (translation_unit -> external_declaration .)
    TIMES           reduce using rule 1 (translation_unit -> external_declaration .)
    ID              reduce using rule 1 (translation_unit -> external_declaration .)
    LPAREN          reduce using rule 1 (translation_unit -> external_declaration .)
    ENUM            reduce using rule 1 (translation_unit -> external_declaration .)
    STRUCT          reduce using rule 1 (translation_unit -> external_declaration .)
    UNION           reduce using rule 1 (translation_unit -> external_declaration .)
    $end            reduce using rule 1 (translation_unit -> external_declaration .)


state 3

    (3) external_declaration -> function_definition .

    AUTO            reduce using rule 3 (external_declaration -> function_definition .)
    REGISTER        reduce using rule 3 (external_declaration -> function_definition .)
    STATIC          reduce using rule 3 (external_declaration -> function_definition .)
    EXTERN          reduce using rule 3 (external_declaration -> function_definition .)
    TYPEDEF         reduce using rule 3 (external_declaration -> function_definition .)
    VOID            reduce using rule 3 (external_declaration -> function_definition .)
    CHAR            reduce using rule 3 (external_declaration -> function_definition .)
    SHORT           reduce using rule 3 (external_declaration -> function_definition .)
    INT             reduce using rule 3 (external_declaration -> function_definition .)
    LONG            reduce using rule 3 (external_declaration -> function_definition .)
    FLOAT           reduce using rule 3 (external_declaration -> function_definition .)
    DOUBLE          reduce using rule 3 (external_declaration -> function_definition .)
    SIGNED          reduce using rule 3 (external_declaration -> function_definition .)
    UNSIGNED        reduce using rule 3 (external_declaration -> function_definition .)
    TYPEID          reduce using rule 3 (external_declaration -> function_definition .)
    BOOL            reduce using rule 3 (external_declaration -> function_definition .)
    CONST           reduce using rule 3 (external_declaration -> function_definition .)
    VOLATILE        reduce using rule 3 (external_declaration -> function_definition .)
    TIMES           reduce using rule 3 (external_declaration -> function_definition .)
    ID              reduce using rule 3 (external_declaration -> function_definition .)
    LPAREN          reduce using rule 3 (external_declaration -> function_definition .)
    ENUM            reduce using rule 3 (external_declaration -> function_definition .)
    STRUCT          reduce using rule 3 (external_declaration -> function_definition .)
    UNION           reduce using rule 3 (external_declaration -> function_definition .)
    $end            reduce using rule 3 (external_declaration -> function_definition .)


state 4

    (4) external_declaration -> declaration .

    AUTO            reduce using rule 4 (external_declaration -> declaration .)
    REGISTER        reduce using rule 4 (external_declaration -> declaration .)
    STATIC          reduce using rule 4 (external_declaration -> declaration .)
    EXTERN          reduce using rule 4 (external_declaration -> declaration .)
    TYPEDEF         reduce using rule 4 (external_declaration -> declaration .)
    VOID            reduce using rule 4 (external_declaration -> declaration .)
    CHAR            reduce using rule 4 (external_declaration -> declaration .)
    SHORT           reduce using rule 4 (external_declaration -> declaration .)
    INT             reduce using rule 4 (external_declaration -> declaration .)
    LONG            reduce using rule 4 (external_declaration -> declaration .)
    FLOAT           reduce using rule 4 (external_declaration -> declaration .)
    DOUBLE          reduce using rule 4 (external_declaration -> declaration .)
    SIGNED          reduce using rule 4 (external_declaration -> declaration .)
    UNSIGNED        reduce using rule 4 (external_declaration -> declaration .)
    TYPEID          reduce using rule 4 (external_declaration -> declaration .)
    BOOL            reduce using rule 4 (external_declaration -> declaration .)
    CONST           reduce using rule 4 (external_declaration -> declaration .)
    VOLATILE        reduce using rule 4 (external_declaration -> declaration .)
    TIMES           reduce using rule 4 (external_declaration -> declaration .)
    ID              reduce using rule 4 (external_declaration -> declaration .)
    LPAREN          reduce using rule 4 (external_declaration -> declaration .)
    ENUM            reduce using rule 4 (external_declaration -> declaration .)
    STRUCT          reduce using rule 4 (external_declaration -> declaration .)
    UNION           reduce using rule 4 (external_declaration -> declaration .)
    $end            reduce using rule 4 (external_declaration -> declaration .)


state 5

    (5) function_definition -> declaration_specifiers . declarator declaration_list compound_statement
    (8) function_definition -> declaration_specifiers . declarator compound_statement
    (9) declaration -> declaration_specifiers . init_declarator_list SEMI
    (10) declaration -> declaration_specifiers . SEMI
    (67) declarator -> . pointer direct_declarator
    (68) declarator -> . direct_declarator
    (46) init_declarator_list -> . init_declarator
    (47) init_declarator_list -> . init_declarator_list COMMA init_declarator
    (80) pointer -> . TIMES type_qualifier_list
    (81) pointer -> . TIMES
    (82) pointer -> . TIMES type_qualifier_list pointer
    (83) pointer -> . TIMES pointer
    (69) direct_declarator -> . ID
    (70) direct_declarator -> . LPAREN declarator RPAREN
    (71) direct_declarator -> . direct_declarator LBRACKET constant_expression_opt RBRACKET
    (72) direct_declarator -> . direct_declarator LPAREN parameter_type_list RPAREN attributes
    (73) direct_declarator -> . direct_declarator LPAREN identifier_list RPAREN
    (74) direct_declarator -> . direct_declarator LPAREN RPAREN
    (48) init_declarator -> . declarator
    (49) init_declarator -> . declarator EQUALS initializer

    SEMI            shift and go to state 42
    TIMES           shift and go to state 32
    ID              shift and go to state 33
    LPAREN          shift and go to state 34

    declarator                     shift and go to state 40
    init_declarator_list           shift and go to state 41
    pointer                        shift and go to state 10
    direct_declarator              shift and go to state 11
    init_declarator                shift and go to state 43

state 6
